src/test/ui/issues/issue-30438-b.stderr
error[E0716]: temporary value dropped while borrowed
  --> $DIR/issue-30438-b.rs:13:10
   |
LL |         &Test { s: &self.s}
   |          ^^^^^^^^^^^^^^^^^^ creates a temporary which is freed while still in use
LL |
LL |     }
   |     -- borrow later used here
   |     |
   |     temporary value is freed at the end of this statement
   |
   = note: consider using a `let` binding to create a longer lived value

error: aborting due to previous error

For more information about this error, try `rustc --explain E0716`.
